[modify] 01. 20150824版本的相关功能。

--- a/taixinkanghu/src/main/res/layout/activity_nurse_order.xml
+++ b/taixinkanghu/src/main/res/layout/activity_nurse_order.xml
@@ -31,7 +31,8 @@
 					android:layout_width="match_parent"
 					android:layout_height="match_parent"
 					android:layout_weight="1"
-					android:orientation="horizontal">
+					android:orientation="horizontal"
+					android:id="@+id/order_option_rg">
 
 					<RadioButton
 						android:id="@+id/all_rbtn"
