--- a/taixinkanghu/src/main/res/layout/activity_confirm_order.xml
+++ b/taixinkanghu/src/main/res/layout/activity_confirm_order.xml
@@ -45,7 +45,7 @@
 					layout="@layout/item_dividing_line_horizontal"/>
 
 				<LinearLayout
-					android:id="@id/item_date"
+					android:id="@+id/func_tab_region_ll"
 					android:layout_width="match_parent"
 					android:layout_height="40dp"
 					android:gravity="center_vertical"
@@ -53,6 +53,7 @@
 					android:visibility="gone">
 
 					<RadioGroup
+						android:id="@+id/change_nurse_rgrp"
 						android:layout_width="match_parent"
 						android:layout_height="match_parent"
 						android:layout_weight="1"
@@ -60,6 +61,7 @@
 
 						<RadioButton
 							style="@style/home_radio_button_style"
+							android:id="@+id/new_nurse_rbtn"
 							android:layout_width="20dp"
 							android:layout_height="match_parent"
 							android:background="@drawable/bg_top_tab"
@@ -67,6 +69,7 @@
 
 						<RadioButton
 							style="@style/home_radio_button_style"
+							android:id="@+id/old_nurse_rbtn"
 							android:layout_width="20dp"
 							android:layout_height="match_parent"
 							android:background="@drawable/bg_top_tab"
