--- a/taixinkanghu/src/main/res/values/nurse_order_page.xml
+++ b/taixinkanghu/src/main/res/values/nurse_order_page.xml
@@ -2,4 +2,13 @@
 <resources>
 	<string name="header_title">陪护订单</string>
 	<string name="bottom_title">首页</string>
+	<string name="nurse_order_cancel_tips">确定取消订单？</string>
+	<string name="confirm_pay">确认支付</string>
+	<string name="cancel_order">取消订单</string>
+
+	<string name="repeat_order">续订</string>
+	<string name="change_nurse">更换</string>
+	<string name="pay_more">补差价</string>
+	<string name="commente_order">评论</string>
+	<string name="cancel_service">退订</string>
 </resources>
