--- a/taixinkanghu/src/main/res/layout/activity_nurse_order_pay.xml
+++ b/taixinkanghu/src/main/res/layout/activity_nurse_order_pay.xml
@@ -229,7 +229,11 @@
 							android:layout_marginLeft="15dp"
 							android:orientation="vertical">
 
-							<include layout="@layout/item_dividing_line_horizontal_fine"/>
+							<include
+								android:id="@+id/dividing_line"
+								layout="@layout/item_dividing_line_horizontal_fine"
+								android:visibility="gone"/>
+
 						</LinearLayout>
 
 						<LinearLayout
@@ -240,7 +244,8 @@
 							android:gravity="center_vertical"
 							android:orientation="horizontal"
 							android:paddingBottom="10dp"
-							android:paddingTop="10dp">
+							android:paddingTop="10dp"
+							android:visibility="gone">
 
 							<ImageView
 								android:layout_width="40dp"
@@ -320,7 +325,8 @@
 								android:layout_width="match_parent"
 								android:layout_height="wrap_content"
 								android:layout_marginRight="15dp"
-								android:orientation="vertical">
+								android:orientation="vertical"
+								android:visibility="gone">
 
 								<include layout="@layout/item_dividing_line_horizontal_fine"/>
 							</LinearLayout>
@@ -333,7 +339,8 @@
 								android:layout_marginBottom="17.5dp"
 								android:layout_marginRight="15dp"
 								android:layout_marginTop="17.5dp"
-								android:background="@drawable/bg_radio_button_tick"/>
+								android:background="@drawable/bg_radio_button_tick"
+								android:visibility="gone"/>
 
 
 						</RadioGroup>
