--- a/taixinkanghu/src/main/res/layout/activity_confirm_order.xml
+++ b/taixinkanghu/src/main/res/layout/activity_confirm_order.xml
@@ -105,7 +105,7 @@
 						android:layout_height="55dp"
 						android:layout_centerInParent="true"
 						android:layout_marginRight="30dp"
-						android:src="@mipmap/face_img"
+						android:src="@drawable/face_1008"
 						app:border_color="@color/main_color"
 						app:border_width="0.5dp"/>
 
