--- a/taixinkanghu/src/main/res/layout/item_worker_list.xml
+++ b/taixinkanghu/src/main/res/layout/item_worker_list.xml
@@ -21,7 +21,7 @@
             android:layout_height="65dp"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="10dp"
-            android:src="@mipmap/face_img"
+            android:src="@drawable/face_1008"
             app:border_color="@color/main_color"
             app:border_width="0.5dp" />
 
