--- a/taixinkanghu/src/main/res/layout/activity_nurs_order_info.xml
+++ b/taixinkanghu/src/main/res/layout/activity_nurs_order_info.xml
@@ -202,7 +202,7 @@
 						android:layout_height="65dp"
 						android:layout_marginLeft="15dp"
 						android:layout_marginRight="15dp"
-						android:src="@mipmap/face_img"
+						android:src="@drawable/face_1008"
 						app:border_color="@color/main_color"
 						app:border_width="0.5dp"/>
 
