--- a/taixinkanghu/src/main/res/layout/activity_nurs_order_reviews.xml
+++ b/taixinkanghu/src/main/res/layout/activity_nurs_order_reviews.xml
@@ -45,7 +45,7 @@
 						android:layout_centerInParent="true"
 						android:layout_gravity="center_vertical"
 						android:layout_marginRight="10dp"
-						android:src="@mipmap/face_img"
+						android:src="@drawable/face_1008"
 						app:border_color="@color/main_color"
 						app:border_width="0.5dp"/>
 
