--- a/taixinkanghu/src/main/res/values/styles.xml
+++ b/taixinkanghu/src/main/res/values/styles.xml
@@ -57,13 +57,11 @@
 
 		<item name="android:background">@null</item>
 
-		<item name="android:layout_width">0.0dip</item>
+		<item name="android:layout_width">wrap_content</item>
 
-		<item name="android:layout_height">match_parent</item>
+		<item name="android:layout_height">wrap_content</item>
 
 		<item name="android:button">@null</item>
-
-		<item name="android:layout_weight">1.0</item>
 
 	</style>
 
