--- a/taixinkanghu/src/main/res/layout/activity_nurs_order_reviews.xml
+++ b/taixinkanghu/src/main/res/layout/activity_nurs_order_reviews.xml
@@ -196,30 +196,33 @@
 								android:orientation="vertical">
 
 								<RadioButton
-									style="@style/home_radio_button_style"
+									style="@style/tick_radio_button_style"
 									android:layout_width="27dp"
-									android:layout_height="20dp"
+									android:layout_height="27dp"
 									android:layout_marginTop="4.5dp"
 									android:layout_marginBottom="4.5dp"
 									android:layout_marginRight="15dp"
+									android:layout_gravity="center_horizontal"
 									android:background="@drawable/bg_radio_button_tick"/>
 
 								<RadioButton
-									style="@style/home_radio_button_style"
+									style="@style/tick_radio_button_style"
 									android:layout_width="27dp"
-									android:layout_height="20dp"
+									android:layout_height="27dp"
 									android:layout_marginTop="4.5dp"
 									android:layout_marginBottom="4.5dp"
 									android:layout_marginRight="15dp"
+									android:layout_gravity="center_horizontal"
 									android:background="@drawable/bg_radio_button_tick"/>
 
 								<RadioButton
-									style="@style/home_radio_button_style"
+									style="@style/tick_radio_button_style"
 									android:layout_width="27dp"
-									android:layout_height="20dp"
+									android:layout_height="27dp"
 									android:layout_marginTop="4.5dp"
 									android:layout_marginBottom="4.5dp"
 									android:layout_marginRight="15dp"
+									android:layout_gravity="center_horizontal"
 									android:background="@drawable/bg_radio_button_tick"/>
 
 							</RadioGroup>
