--- a/taixinkanghu/src/main/res/values/nurse_order_pay_page.xml
+++ b/taixinkanghu/src/main/res/values/nurse_order_pay_page.xml
@@ -5,4 +5,6 @@
 	<string name="cancel_title">确定要放弃付款？</string>
 	<string name="cancel_btn">确定</string>
 	<string name="confirm_btn">取消</string>
+	<string name="error_tips_select_pay_option">请选择支付方式？</string>
+	<string name="error_tips_pay_aciton_invalid">该支付方式暂未开通。</string>
 </resources>
