--- a/taixinkanghu/src/main/res/values/nurse_order_pay_more.xml
+++ b/taixinkanghu/src/main/res/values/nurse_order_pay_more.xml
@@ -4,4 +4,5 @@
 	<string name="pay_more_tips_price">请输入补差价金额？</string>
 	<string name="pay_more_tips_reason">请选择变更内容？</string>
 	<string name="pay_more_reason_option">患者状态变更</string>
+	<string name="content_confirm_btn">确认支付</string>
 </resources>
