--- a/taixinkanghu/src/main/res/layout/activity_confirm_order.xml
+++ b/taixinkanghu/src/main/res/layout/activity_confirm_order.xml
@@ -30,6 +30,48 @@
 					android:id="@+id/order_confirm_page_header"
 					layout="@layout/include_header"/>
 
+				<LinearLayout
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:background="@color/white"
+					android:orientation="horizontal">
+
+					<TextView
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:layout_marginLeft="15dp"
+						android:layout_marginRight="10dp"
+						android:layout_marginBottom="10dp"
+						android:layout_marginTop="10dp"
+						android:text="请选择服务开始时间："
+						android:textSize="14.0sp"/>
+
+					<TextView
+						android:id="@+id/service_address_tv"
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:layout_marginRight="10dp"
+						android:layout_weight="1.0"
+						android:layout_marginBottom="10dp"
+						android:layout_marginTop="10dp"
+						android:hint="点击选择"
+						android:gravity="right"
+						android:singleLine="true"
+						android:textSize="14.0sp"/>
+
+					<ImageView
+						android:id="@+id/right_date"
+						android:layout_width="15dp"
+						android:layout_height="15dp"
+						android:layout_marginBottom="10dp"
+						android:layout_marginTop="10dp"
+						android:layout_marginRight="15dp"
+						android:background="@mipmap/img_right"/>
+
+				</LinearLayout>
+
+				<include layout="@layout/item_dividing_line_horizontal"/>
+
 				<TextView
 					android:layout_width="wrap_content"
 					android:layout_height="40dp"
@@ -60,16 +102,16 @@
 						android:orientation="horizontal">
 
 						<RadioButton
-							style="@style/home_radio_button_style"
 							android:id="@+id/new_nurse_rbtn"
+							style="@style/home_radio_button_style"
 							android:layout_width="20dp"
 							android:layout_height="match_parent"
 							android:background="@drawable/bg_top_tab"
 							android:text="更换后"/>
 
 						<RadioButton
-							style="@style/home_radio_button_style"
 							android:id="@+id/old_nurse_rbtn"
+							style="@style/home_radio_button_style"
 							android:layout_width="20dp"
 							android:layout_height="match_parent"
 							android:background="@drawable/bg_top_tab"
