--- a/taixinkanghu/src/main/res/values/nurse_order_page.xml
+++ b/taixinkanghu/src/main/res/values/nurse_order_page.xml
@@ -11,4 +11,6 @@
 	<string name="pay_more">补差价</string>
 	<string name="commente_order">评论</string>
 	<string name="cancel_service">退订</string>
+
+	<string name="contetn_click_select">点击选择</string>
 </resources>
