--- a/taixinkanghu/src/main/res/values/ids.xml
+++ b/taixinkanghu/src/main/res/values/ids.xml
@@ -147,4 +147,7 @@
     <item name="add_info" type="id">add_info</item>
     <item name="btn_bottom" type="id">btn_bottom</item>
     <item name="btn_comment" type="id">btn_comment</item>
+    <item name="main_rg_home" type="id">main_rg_home</item>
+    <item name="main_rg_personal" type="id">main_rg_personal</item>
+    <item name="main_rg_company" type="id">main_rg_company</item>
 </resources>
