[modify] 修改首页页标签按钮实现方式，和新的布局文件

--- a/taixinkanghu/src/main/res/layout/activity_main_new.xml
+++ b/taixinkanghu/src/main/res/layout/activity_main_new.xml
@@ -19,6 +19,13 @@
 			android:layout_height="match_parent"
 			android:layout_weight="1">
 
+			<FrameLayout
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:layout_weight="1.0">
+
+
+			</FrameLayout>
 
 		</ScrollView>
 
@@ -27,7 +34,7 @@
 		<RadioGroup
 			android:id="@id/tabs_rg"
 			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
+			android:layout_height="30dp"
 			android:background="@color/white"
 			android:orientation="horizontal">
 
