--- a/taixinkanghu/src/main/res/values/styles.xml
+++ b/taixinkanghu/src/main/res/values/styles.xml
@@ -26,15 +26,14 @@
 	</style>
 
 	<style name="home_radio_button_style">
-		<item name="android:textSize">14.0sp</item>
-		<item name="android:textColor">@color/tab_btn_color</item>
+		<item name="android:textSize">12.0sp</item>
+		<item name="android:textColor">@color/date_select_green</item>
 		<item name="android:gravity">center</item>
-		<item name="android:layout_gravity">center_horizontal</item>
+		<item name="android:layout_gravity">center</item>
 		<item name="android:background">@null</item>
-		<item name="android:layout_width">match_parent</item>
+		<item name="android:layout_width">0.0dip</item>
 		<item name="android:layout_height">wrap_content</item>
 		<item name="android:button">@null</item>
-		<item name="android:orientation">vertical</item>
 		<item name="android:layout_weight">1.0</item>
 	</style>
 
